[package]
name = "ggez"
description = "A lightweight game framework for making 2D games with minimum friction, inspired by Love2D."
version = "0.5.1"
homepage = "http://ggez.rs"
repository = "https://github.com/ggez/ggez"
documentation = "https://docs.rs/ggez"
keywords = ["ggez", "graphics", "2D", "game", "engine"]
authors = [
   "Rafael Epplee <raffomania@gmail.com>",
   "Sven-Hendrik Haase <svenstaro@gmail.com>",
   "Simon Heath <icefoxen@gmail.com>",
]

edition = "2018"
license = "MIT"
readme = "README.md"
categories = ["game-engines"]
build = "build.rs"

[badges]
maintenance = { status = "passively-maintained" }

[lib]
name = "ggez"
path = "src/lib.rs"

[features]
default = ["c_dependencies"]
bzip2 = ["zip/bzip2"]
mp3 = ["rodio/mp3"]
multithread-image-decoding = ["image/hdr", "image/jpeg_rayon"]
c_dependencies = ["bzip2", "mp3"]

[dependencies]
bitflags = "1"
zip = { version = "0.5", default-features = false }
directories = "2"
gfx = "0.18"
gfx_core = "0.9"
gfx_device_gl = "0.16"
glyph_brush = "0.7"
gfx_window_glutin = { path = "../gfx_window_glutin" }
glutin = "0.24"
winit = { version = "0.22.2" }
image = {version = "0.23", default-features = false, features = ["gif", "jpeg", "ico", "png", "pnm",
"tga", "tiff", "webp", "bmp", "dxt", ] }
rodio = { version = "0.11", default-features = false, features = ["flac", "vorbis", "wav"] }
rusttype = "0.9"
serde = "1"
serde_derive = "1"
toml = "0.5"
log = "0.4"
lyon = "0.13"
smart-default = "0.6"
nalgebra = {version = "0.21", features = ["mint"] }
# Has to be the same version of mint that nalgebra uses here.
mint = "0.5"
gilrs = "0.7"
approx = "0.3"
fxhash = "0.2"

[patch.crates-io]
lyon = { git = "https://github.com/nical/lyon", rev = "de160bbdeb821d29415081c27249e07a37d0e7de" }
glutin = { git = "https://github.com/rust-windowing/glutin", rev = "f4221729c4b92f94f9b556185082a9e8fa1949f6" }

[dev-dependencies]
chrono = "0.4"
fern = "0.6"
rand = "0.7"
structopt = "0.3"
cgmath = { version = "0.17", features = ["mint"]}
skeptic = "0.13"

[build-dependencies]
skeptic = "0.13"

